--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-scripts": "4.0.3",
+    "react-slider": "^1.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
