--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slider": "^1.3.1",
     "web-vitals": "^1.0.1"
